{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 101,
  "lineage": "e17f38d3-7f8c-6310-c0ac-ff6927758d38",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "packer-image-natg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/natGateways/packer-image-natg",
            "idle_timeout_in_minutes": 4,
            "location": "eastus",
            "name": "packer-image-natg",
            "resource_group_name": "rg-hypera-packer-image",
            "resource_guid": "aa4575ea-dad2-4bfd-b200-e9628c67bbf7",
            "sku_name": "Standard",
            "tags": {
              "application": "DevOps",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "DevOps Teams",
              "operatingcostcenter": "0570025003",
              "owner": "INFRA_SO",
              "projectcostcenter": "0570025003",
              "projeto": "INFRA_SO",
              "securitycontact": "juliano.barbosa@hypera.com.br",
              "source": "terraform",
              "team": "DevOps",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "packer-image-natg-pip-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/natGateways/packer-image-natg|/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/publicIPAddresses/packer-image-natg-pip",
            "nat_gateway_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/natGateways/packer-image-natg",
            "public_ip_address_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/publicIPAddresses/packer-image-natg-pip"
          },
          "dependencies": [
            "azurerm_nat_gateway.packer-image-natg",
            "azurerm_public_ip.packer-image-natg-pip",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_prefix_association",
      "name": "packer-image-natg-ipprefix-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/natGateways/packer-image-natg|/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/publicIPPrefixes/packer-image-natg-ipprefix",
            "nat_gateway_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/natGateways/packer-image-natg",
            "public_ip_prefix_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/publicIPPrefixes/packer-image-natg-ipprefix"
          },
          "dependencies": [
            "azurerm_nat_gateway.packer-image-natg",
            "azurerm_public_ip_prefix.packer-image-natg-ipprefix",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "azxdev01-private-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkInterfaces/azxdev01-private-nic",
            "internal_domain_name_suffix": "auualvxs1teejceobx0mgd3qre.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "azxdev01-private-nic",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/private-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-ED-3A-57",
            "name": "azxdev01-private-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "rg-hypera-packer-image",
            "virtual_machine_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Compute/virtualMachines/azxdev01"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.private-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "location": "eastus",
            "name": "private-nsg",
            "resource_group_name": "rg-hypera-packer-image",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-public-subnet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "DevOps",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "DevOps Teams",
              "operatingcostcenter": "0570025003",
              "owner": "INFRA_SO",
              "projectcostcenter": "0570025003",
              "projeto": "INFRA_SO",
              "securitycontact": "juliano.barbosa@hypera.com.br",
              "source": "terraform",
              "team": "DevOps",
              "tier": "Infrastructure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "public-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "location": "eastus",
            "name": "public-nsg",
            "resource_group_name": "rg-hypera-packer-image",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh-all",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "application": "DevOps",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "DevOps Teams",
              "operatingcostcenter": "0570025003",
              "owner": "INFRA_SO",
              "projectcostcenter": "0570025003",
              "projeto": "INFRA_SO",
              "securitycontact": "juliano.barbosa@hypera.com.br",
              "source": "terraform",
              "team": "DevOps",
              "tier": "Infrastructure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "packer-image-bastion-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/publicIPAddresses/packer-image-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.163.247.195",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "packer-image-bastion-pip",
            "resource_group_name": "rg-hypera-packer-image",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "application": "DevOps",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "DevOps Teams",
              "operatingcostcenter": "0570025003",
              "owner": "INFRA_SO",
              "projectcostcenter": "0570025003",
              "projeto": "INFRA_SO",
              "securitycontact": "juliano.barbosa@hypera.com.br",
              "source": "terraform",
              "team": "DevOps",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "packer-image-natg-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/publicIPAddresses/packer-image-natg-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.120.22.47",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "packer-image-natg-pip",
            "resource_group_name": "rg-hypera-packer-image",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "application": "DevOps",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "DevOps Teams",
              "operatingcostcenter": "0570025003",
              "owner": "INFRA_SO",
              "projectcostcenter": "0570025003",
              "projeto": "INFRA_SO",
              "securitycontact": "juliano.barbosa@hypera.com.br",
              "source": "terraform",
              "team": "DevOps",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hypera-packer-image",
            "virtual_network_name": "vnet-packer-image"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/gateway-subnet",
            "name": "gateway-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hypera-packer-image",
            "virtual_network_name": "vnet-packer-image"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hypera-packer-image",
            "service_endpoints": [
              "Microsoft.ServiceBus",
              "Microsoft.Sql"
            ],
            "virtual_network_name": "vnet-packer-image"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-hypera-packer-image",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.ServiceBus"
            ],
            "virtual_network_name": "vnet-packer-image"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_nat_gateway_association",
      "name": "packer-image-public-subnet-nat-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/public-subnet",
            "nat_gateway_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/natGateways/packer-image-natg",
            "subnet_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/public-subnet"
          },
          "dependencies": [
            "azurerm_nat_gateway.packer-image-natg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkSecurityGroups/private-nsg",
            "subnet_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/private-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.private-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.private-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public-subnet-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/public-subnet",
            "network_security_group_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkSecurityGroups/public-nsg",
            "subnet_id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/public-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.public-nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.public-subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d6052805-dcf2-44c8-888e-0df4c30fb08c",
            "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image",
            "location": "eastus",
            "name": "vnet-packer-image",
            "resource_group_name": "rg-hypera-packer-image",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/public-subnet",
                "name": "public-subnet",
                "security_group": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkSecurityGroups/public-nsg"
              },
              {
                "address_prefix": "10.0.10.0/26",
                "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/private-subnet",
                "name": "private-subnet",
                "security_group": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/networkSecurityGroups/private-nsg"
              },
              {
                "address_prefix": "10.0.255.224/27",
                "id": "/subscriptions/51f4e493-4815-4858-8bbb-f263e7fb63d6/resourceGroups/rg-hypera-packer-image/providers/Microsoft.Network/virtualNetworks/vnet-packer-image/subnets/gateway-subnet",
                "name": "gateway-subnet"
              }
            ],
            "tags": {
              "application": "DevOps",
              "applicationversion": "1.0.0",
              "compliance": "HIPAA",
              "confidentiality": "PII/PHI",
              "environment": "Sandbox",
              "infrastructureversion": "1.0.0",
              "name": "DevOps Teams",
              "operatingcostcenter": "0570025003",
              "owner": "INFRA_SO",
              "projectcostcenter": "0570025003",
              "projeto": "INFRA_SO",
              "securitycontact": "juliano.barbosa@hypera.com.br",
              "source": "terraform",
              "team": "DevOps",
              "tier": "Infrastructure"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}